--- a/build.gradle
+++ b/build.gradle
@@ -37,7 +37,10 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
 
+}
 
+compileJava {
+    options.compilerArgs << '-parameters'
 }
 
 tasks.named('test') {
